[package]
name = "iracing-telem"
version = "0.1.0"
edition = "2021"
description = "Rust port of the iRacing telemetry SDK."
homepage="https://github.com/superfell/iracing-telem"
repository="https://github.com/superfell/iracing-telem"
license="BSD-3-Clause"
keywords= ["iracing","telemetry","racing","irsdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
encoding = "0.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
]

[package.metadata.docs.rs]
default-target="x86_64-pc-windows-msvc"
